service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  annotations:
    # Annotations for AWS load balancer integration
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # Enable cross-zone load balancing for high availability
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-lb-enabled: "true"
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: java-app
